2003-09-30
	Updated windows.html, and .emacs by Bill Clementson - removed
	Corman Lisp support since haven't been able to get Corman releases
	after 1.5 to work in either inferior lisp mode or ilisp.

2003-09-25
	Updated .emacs by Bill Clementson - allow evals in info.

2003-09-15
	Updated windows.html, and .emacs by Bill Clementson - minor key
	mods.

2003-09-14
	Updated windows.html, and .emacs by Bill Clementson - minor mods.

2003-09-03
	Updated windows.html, and .emacs by Bill Clementson to support
	clisp 2.31.

2003-09-02
  Updated windows.html and index.html by Bill Clementson-minor edits and
  update of cua-emul.el download site.

2003-09-01
  Updated windows.html, index.html, and .emacs by Bill Clementson to 
  provide inital support for Mac OS X, add additional optional packages,
  and simplify installation.

2003-08-22
  Fixed typo in io.html

2003-07-01
  Added link to Erann Gat's "Idiot's Guide"
  Formatting in macros.html

2003-06-02
  Fixed link to "Common Lisp Hints"

2003-05-28
  Updated windows.html by Bill Clementson to support emacs version 21.3.

2003-04-15
  Fixed typo in Mark Watson link
  Changed CLiki link in pattern_matching.html
  Added link to The Dynamic Learning Center

2003-03-18
  Changed cw-usedefault to cw_usedefault in some code

2003-03-18
  Added win32.html by Jeff Caldwell last week
  Incoporating suggested changes from Kenny Tilton and Edi Weitz
  Maintaining CHANGELOG
  Including Paul Tarvydas and Kenny Tilton as contributors
  Provided an introduction to Paul Tarvydas's code
  Changed link to Petzold's book
  Changed wm-close to wm_close, making the move from Petzold to the Lisp code a slightly more seamless
  A few stylistic changes
  Included :dbcs decision made at run time, not compile time.   

2002-12-26
  Fixed some typos in misc.html, license.html, and in this file

2002-12-25
  Slight changes to macros.html to make it look like the rest of the cookbook
  Added initial entry for macros.html to CHANGELOG