@@ -1,8 +1,11 @@
 <!doctype HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.27 2003/10/01 04:21:12 bill_clementson Exp $	 -->
+<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.28 2003/10/03 20:43:48 bill_clementson Exp $	 -->
 <html>
 
 <head>
+<meta http-equiv="Content-Language" content="en-us">
+<meta name="GENERATOR" content="Microsoft FrontPage 5.0">
+<meta name="ProgId" content="FrontPage.Editor.Document">
 <title>The Common Lisp Cookbook - Setting up an IDE with Emacs on Windows or Mac 
 OS X</title>
 <style type="text/css">pre          { background-color: #e0e0e0; margin-left: 20px }
@@ -26,6 +29,7 @@ implementations on Windows:</p>
   <li><b>Allegro Common Lisp (ACL):</b> Franz's own &quot;ELI&quot; will be used in Emacs.</li>
   <li><b>CLISP:</b> ILISP and Emacs Inferior Lisp Mode will be two alternative 
   environments that can be used with CLISP.</li>
+  <li><b>Corman Common Lisp:</b> The Emacs Inferior Lisp Mode will be used.</li>
   <li><b>Xanalys LispWorks:</b> ILISP will be used in Emacs to provide the 
   development environment (Note: the trial version of the product doesn't 
   provide a non-gui Lisp image and this is necessary if the product is to be 
@@ -55,6 +59,7 @@ with an Emacs setup that:</p>
   <li><a href="#Installing CLISP">Installing CLISP</a> (optional)</li>
   <li><a href="#Installing ACL">Installing ACL</a> (optional)</li>
   <li><a href="#Installing LispWorks">Installing LispWorks</a> (optional)</li>
+  <li><a href="#Installing Corman CL">Installing Corman CL</a> (optional)</li>
   <li><a href="#Configuration steps">Configuration steps</a></li>
   <li><a href="#Testing the environments">Testing the environments</a></li>
 </ol>
@@ -199,6 +204,17 @@ documentation</a> (optional)</h3>
   and use Winzip to unpack the files into the c:\home\docs directory. This 
   should result in a new directory: <a href="file:///c:/home/docs/cltl">
   c:\home\docs\cltl</a></li>
+  <li>OPTIONAL: Download the info version of the CL (early ANSI draft) 
+  documentation from <a href="ftp://ftp.gnu.org/pub/gnu/gcl/gcl.info.tgz">
+  ftp://ftp.gnu.org/pub/gnu/gcl/gcl.info.tgz</a> and use Winzip to unpack the 
+  files into the c:\home\info directory. You will then need to use Winzip again 
+  on each of the &quot;*.gz&quot; files that are in the info directory - unpack each of 
+  these into the c:\home\info directory as well. You may then delete the &quot;*.gz&quot; 
+  files that remain in the directory. Lastly, add the following line to the 
+  &quot;dir&quot; file in the c:\bin\emacs-21.3\info directory:<blockquote>
+    <pre>* ANSI-CL: (gcl). ANSI Common Lisp Manual.</pre>
+  </blockquote>
+  </li>
 </ul>
 <h3><a name="Installing CLISP">4. Installing CLISP</a> (optional)</h3>
 <ul>
@@ -281,7 +297,16 @@ lispworks-4200 -init c:\home\lisp\console.lisp</pre>
   <p>This will result in the lw42-console.exe file being created in the 
   c:\bin\lispworks-4.2 directory.</p>
 </blockquote>
-<h3><a name="Configuration steps">7. Configuration steps</a></h3>
+<h3><a name="Installing Corman CL">7. Installing Corman CL</a></h3>
+<ul>
+  <li>Download the precompiled binaries for <a href="http://www.corman.net/">
+  Corman Lisp</a> for Windows from:
+  <a href="http://www.cormanlisp.com/cgi/rgcorman/ccl_download_form.cgi">
+  http://www.cormanlisp.com/cgi/rgcorman/ccl_download_form.cgi</a></li>
+  <li>Run the downloaded installation program (CormanLisp_1_5_Setupex.exe) and 
+  install Corman CL into the c:\bin\corman-1.5 directory.</li>
+</ul>
+<h3><a name="Configuration steps">8. Configuration steps</a></h3>
 <ul>
   <li>Setup environmental variables either in the autoexec.bat file (e.g. - 
   Windows/98) or the Control Panel/System (e.g. - Windows/NT/2000/XP):</li>
@@ -373,7 +398,7 @@ lispworks-4200 -init c:\home\lisp\console.lisp</pre>
   &quot;C-x C-c&quot; and pressing &quot;y&quot; when you get the &quot;Do you really want to exit Emacs 
   ? (y or n)&quot; prompt in the minibuffer.</li>
 </ul>
-<h3><a name="Testing the environments">8. Testing the environments</a></h3>
+<h3><a name="Testing the environments">9. Testing the environments</a></h3>
 <ul>
   <li>Start Emacs (either by using the Start menu's Gnu Emacs shortcut or by 
   using Run on the Windows Start menu with the command &quot;c:\emacs\bin\runemacs.exe&quot;) 
@@ -434,10 +459,29 @@ lispworks-4200 -init c:\home\lisp\console.lisp</pre>
       </li>
     </ul>
     </li>
+    <li>If you installed Corman, do the following:
+    <ul>
+      <li>Click in the dired window and press &quot;M-C-F5&quot; until the minibuffer 
+      window at the bottom says &quot;lisp-used: :corman-inf&quot; indicating that you 
+      have toggled to Corman mode).</li>
+      <li>Test that Corman runs by pressing &quot;F5&quot;.
+      <ul>
+        <li>Click in the *inferior-lisp* window and press &quot;C-h b&quot; (this will 
+        show you the keybindings that are in effect for Corman in Inferior Lisp 
+        Mode).</li>
+        <li>Click in the *Help* window and scroll through the keybinding list. 
+        When finished, press &quot;F4&quot; to close that window.</li>
+        <li>Click in the *inferior-lisp* window and press &quot;F4&quot; to close that 
+        window.</li>
+      </ul>
+      </li>
+    </ul>
+    </li>
     <li>If you installed the documentation, you can test that the online 
     documentation works by pressing &quot;F1&quot; (for the HyperSpect) or &quot;M-F1&quot; (for 
     CLtL2) when the cursor is on a Lisp keyword (e.g. -- &quot;defun&quot; or &quot;setq&quot;). 
-    This should bring up a browser with the documentation for that keyword.</li>
+    This should bring up a browser with the documentation for that keyword. See 
+    the function key definitions below for accessing other documentation.</li>
     <li>Exit Emacs by pressing &quot;C-x C-c&quot; and pressing &quot;y&quot; when you get the &quot;Do 
     you really want to exit Emacs ? (y or n)&quot; prompt in the minibuffer.</li>
   </ul>
@@ -454,7 +498,7 @@ different Lisp implementations.</p>
     different Lisp implementations, Lisp documentation and Emacs-specific files. 
     It also sets the default Lisp implementation (Note: if you want to specify a 
     different default Lisp implementation, change the lisp-used variable to one 
-    of :clisp-ilisp, :clisp-inf, :acl-eli, :lw-ilisp).</li>
+    of :clisp-ilisp, :clisp-inf, :acl-eli, :lw-ilisp, :corman-inf).</li>
     <li><b>Initial Code Load:</b> Loads Emacs files that are needed later on.</li>
     <li><b>System Customizations: </b>Some standard customizations that make 
     Emacs easier to use.</li>
@@ -480,6 +524,8 @@ different Lisp implementations.</p>
       for the Lisp symbol under the cursor using the default browser.</li>
       <li>M-S-F1 - Brings up the CLtL2 (if it was installed) documentation page 
       for the Lisp symbol under the cursor using w3 (if it was installed).</li>
+      <li>C-M-F1 - Brings up the info (if it was installed) documentation page 
+      for the Lisp symbol under the cursor.</li>
       <li>F5 - Starts the appropriate Lisp mode for the Lisp implementation that 
       was selected (use C-M-F5 to select the Lisp implementation before pressing 
       F5 to start it).</li>
